{
    "name": "New Controls",
    "maps": [
        {
            "name": "OnMouse",
            "id": "84f97317-33a2-43bc-a883-63fb1777d6d6",
            "actions": [
                {
                    "name": "MouseClick",
                    "type": "Value",
                    "id": "5689f478-c269-4f2f-ba8a-0ced337feea6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4ba1db37-b12c-43d0-86ad-e9a3f65d9a3b",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}